--- a/toDoList/css-toDoList/toDoList.css
+++ b/toDoList/css-toDoList/toDoList.css
@@ -1,5 +1,5 @@
 #toDoList {
-  background-color: yellow;
+  background-color: white;
   font-size: 100%;
 }
 
@@ -9,6 +9,8 @@
 
 body {
   color: #34495e;
+  width: 100%;
+  height: 100%;
 }
 
 .clicked {
@@ -22,6 +24,11 @@ body {
 
 .showing {
   display: block;
+}
+
+#toDoList {
+  width: 100%;
+  height: 100%;
 }
 
 @keyframes fadeIn {
