--- a/calculator/css-calculator/calculator.css
+++ b/calculator/css-calculator/calculator.css
@@ -54,7 +54,6 @@ header {
 .cssBtnRow5 {
   display: flex;
   height: 20%;
-  margin: 0;
 }
 
 .cssBtnRow1 button,
@@ -63,6 +62,7 @@ header {
 .cssBtnRow4 button:nth-child(4),
 .cssBtnRow5 button:nth-child(2) {
   background-color: dimgray;
+  padding: 0;
 }
 
 .cssBtnRow2 button:nth-child(1),
@@ -76,6 +76,7 @@ header {
 .cssBtnRow4 button:nth-child(3),
 .cssBtnRow5 button:nth-child(1) {
   background-color: pink;
+  padding: 0;
 }
 
 .cssBtns button:not(.cssBtnEqual) {
